# soundex

./: CMakeLists.txt  Main.cpp  Soundex.h  SoundexTest.cpp
